# netbox-ninja-plugin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump_version.yml  enforce_version_bump.yml  publish-to-pypi.yml  tag-new-release.yml  test.yml
develop/: Dockerfile  base_requirements.txt  configuration.py  dev.env  docker-compose.yml  manage.py
develop/db_scripts/: restore_db_snapshot.sh  take_db_snapshot.sh
develop/db_scripts/snapshots/: demo.Z
develop/drawio_export_api/: local.env
develop/drawio_export_api/certs/: README.md  dev-fullchain.pem  dev-privkey.pem
drawio_templates/: site_l2_diagram-v2.drawio.j2  site_l2_diagram.drawio.j2  sites_in_region.drawio  sites_in_region.drawio.j2
netbox_ninja_plugin/: __init__.py  helpers.py  models.py  navigation.py  template_content.py  urls.py
netbox_ninja_plugin/api/: serializers.py  urls.py  views.py
netbox_ninja_plugin/migrations/: 0001_initial.py  0002_ninjatemplate_object_type_filters_and_more.py
netbox_ninja_plugin/ninja_template/: choices.py  filtersets.py  forms.py  logic.py  models.py  tables.py  views.py
netbox_ninja_plugin/static/netbox_ninja_plugin/js/: viewer-loader.js  viewer-static.min.js
netbox_ninja_plugin/templates/: _drawio_script.html  ninja_object_card.html  ninja_rendered.html  ninja_tab.html  ninja_template.html
netbox_ninja_plugin/templates/netbox_ninja_plugin/: _drawio_script.html  _ninja_template_download_script.html  _ninja_template_filters.html  _ninja_template_filters_button.html  _ninja_template_filters_collapse.html  ninja_tab.html  ninjatemplate.html  ninjatemplatestringfilter.html  ninjatemplatestringfilter_edit.html  ninjatemplatestringfilteroption.html
netbox_ninja_plugin/templatetags/: ninja_tags.py
netbox_ninja_plugin/tests/: __init__.py  test_forms.py  test_views.py  tests.py
