[tool.poetry]
name = "netbox-ninja-plugin"
version = "0.0.3"
description = "Dynamic configuration files and images from NetBox."
authors = ["Veikko Pankakoski <veikko@rautanen.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "netbox_ninja_plugin" }]
homepage = "https://rautanen.io"
repository = "https://github.com/rautanen-companies/netbox-ninja-plugin"
documentation = "https://github.com/rautanen-companies/netbox-ninja-plugin"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
