[tool.poetry]
name = "netbox-ninja-plugin"
version = "0.3.0"
description = "Dynamic configuration files and images from NetBox."
authors = ["Veikko Pankakoski <veikko@rautanen.io>", "Jaakko Rautanen <jaakko@rautanen.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "netbox_ninja_plugin" }]
homepage = "https://rautanen.io"
repository = "https://github.com/rautanen-io/netbox-ninja-plugin"
documentation = "https://github.com/rautanen-io/netbox-ninja-plugin"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "2.32.2"
lxml = "6.1.1"

[tool.poetry.group.debug.dependencies]
debugpy = "1.8.20"

[tool.poetry.group.test.dependencies]
pytest = "9.0.3"
black = "26.5.1"
isort = "8.0.1"
flake8 = "7.3.0"
autoflake = "2.3.3"
pre-commit = "4.6.0"

[tool.poetry.group.dev.dependencies]
django = "6.0.4"
jinja2 = "3.1.6"
django-taggit = "6.1.0"
django-tables2 = "2.8.0"
djangorestframework = "3.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
